# conveyor

./: .gitignore  pyproject.toml  requirements.txt  start.bat
alembic/: env.py
alembic/versions/: b2121b29705a_database_creation.py
src/: check.py  misc.py  run.py
src/app/: config.py  run.py
src/app/auth/: __init__.py  auth_routers.py  backend.py  models.py  strategy.py  user_manager.py  users_proxy.py
src/app/auth/dependencies/: users.py
src/app/core/: config.py  core_router.py  schemas.py
src/app/core/models/: base.py  db_helper.py
src/app/database/: base.py  db_manager.py  models.py
src/app/middlewares/: track_clients.py
src/app/services/: bytetrack.yaml  common.py  consumer.py  main.py  manager.py  producer.py  utils.py
src/app/static/: main.js  style.css
src/app/static/css/: style.css
src/app/templates/: base.html  index.html  login.html  navbar.html  profile.html  stats.html  video.html
src/app/views/: core.py
src/models/: camera_calibration_3x5.npz
