[project]
name = "conveyor"
version = "0.1.0"
description = ""
authors = [
    {name = "box7",email = "theverynvg@vk.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.13,<0.116.0)",
    "ultralytics (>=8.3.159,<9.0.0)",
    "uvicorn (>=0.34.3,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
